--- a/Workshop01/.project
+++ b/Workshop01/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Workshop01</name>
+	<name>workshop01</name>
 	<comment></comment>
 	<projects>
 	</projects>
